# Equity-Analyst

./: .gitignore  BUILD.md  README.md  equity_analyst_sprint_roadmap.html  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vite.config.ts
backend/: main.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/api/: networth.ts  portfolio.ts  stock.ts
src/components/: AiPanel.tsx  ChartPanel.tsx  MetricsBar.tsx  Navbar.tsx  NetWorthPanel.tsx  PortfolioPanel.tsx  SearchBar.tsx  StockHeader.tsx
