[package]
name = "equity-analyst"
version = "0.1.0"
description = "Equity Analyst Desktop App"
authors = []
edition = "2021"

[[bin]]
name = "equity-analyst"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
